tests/sksl/errors/ReservedNameTypedef.glsl
### Compilation failed:

error: 1: 'typedef' is a reserved word
int typedef;
    ^^^^^^^
1 error
